Mon Feb 26 17:30:03 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BDS4WorkspaceCreator.pm:
        * modules/BMakeWorkspaceCreator.pm:
        * modules/CCWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WinWorkspaceBase.pm:

          Added a Windows Workspace base module to override methods that are
          used in Creator::expand_variables().

        * modules/Options.pm:

          Reverted my change from Wed Jan 24 19:04:58 UTC 2007.  It turns
          out that the "extra parameter" was still needed.

        * modules/ProjectCreator.pm:

          Corrected a comment about sorting template variable values.

Mon Feb 26 13:09:44 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:

          Moved the Modify_Custom section down to the end of the
          Define_Custom section.

        * modules/Creator.pm:

          Fixed a bug in subtraction where a partial subtraction would occur
          if an element contained the subtracted element plus other text.

        * prj_install.pl:

          Added the -l option to use symbolic links instead of copies.

Fri Feb 16 19:56:13 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/openssl.mpb:
          Added support for borland template so that we can use the
          borland template with openssl

Mon Feb 12 13:33:13 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:
        * templates/nmake.mpd:
        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Changed the source component specific keyword, managed, to be
          allowed as a project level setting as well.  Also, the value of the
          'managed' setting can determine different managed c++ levels for
          vc8 only.

Thu Feb  8 19:45:54 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
